fixed issues on mobileview

--- a/src/components/layout/Menu/MainMenu.module.scss
+++ b/src/components/layout/Menu/MainMenu.module.scss
@@ -37,7 +37,7 @@
     }
 
     @media screen and (max-width: 450px) {
-      top: 300px;
+      top: 200px;
       right: 0px;
       width: 300px;
       min-height: 400px;
